# SO2NDK

./: README.md
MyApplication/app/: build.gradle
MyApplication/app/src/main/java/com/example/myapplication/: MainActivity.java
MyApplication/app/src/main/java/com/lijmin/other/: LinkOther.java
MyApplication/app/src/main/res/layout/: activity_main.xml
MyApplication/gradle/wrapper/: gradle-wrapper.properties
other/: settings.gradle
other/app/: build.gradle
other/app/src/androidTest/java/com/lijmin/other/: ExampleInstrumentedTest.java
other/app/src/main/: AndroidManifest.xml
other/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
other/app/src/main/cpp/include/: other.h
other/app/src/main/java/com/lijmin/other/: LinkOther.java  MainActivity.java
other/app/src/main/res/values/: themes.xml
other/app/src/main/res/values-night/: themes.xml
other/app/src/test/java/com/lijmin/other/: ExampleUnitTest.java
other/gradle/wrapper/: gradle-wrapper.properties
